2012-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Depending on the terminal type and
	the current encoding, improper enhanced text syntax could cause anything
	from garbage text to a segfault:
	  set termopt enhanced; 
	  set label "~"; plot [0:1][0:1] '+' using 1:1:("~^") with labels
	Bugfix

	* src/gplt_x11.c:  Change the fallback font string used when the current
	encoding is UTF-8 (iso10646-1) or when all else fails (iso8859-1).  This
	is admitted biased towards English as a default, but the previous string
	(*-*) does not work for common recent x11 implementations.

2012-12-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (set_font): quick fix to redefine vshift every time the
	current font size changes. A better fix would query the font internally.
	The failure to do this led to poor vertical centering of text using any
	font other than the default, and bad key box layout for small key fonts.

	* term/svg.trm (set_font): Similar fix for svg.

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): and for wxt.

2012-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  If a data column requested by name is not found,
	treat it as undefined (DF_UNDEFINED) rather than terminating data input
	with int_error().  This makes the treatment of named columns more like
	that of numbered columns.
	Bug #3595672

2012-12-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Background color 0x0 was incorrectly interpreted as
	"none" rather than "black". Bugfix.

2012-11-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Truncate requested column number to maximum sane
	value. This prevents a segfault on "plot $foo using 1 title column(999)"

2012-11-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Fix the hexadecimal format used to output RGB color

	* term/canvas.trm term/js/canvasmath.js:  Backport updates from 4.7
